--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -8,3 +8,10 @@ $amarillo: #fef46d;
 $morado: #752f97; 
 $negro: #000000;
 $blanco: #ffffff; 
+
+// Displays
+
+$phone: 480px;
+$tablet: 768px;
+$desktop: 992px;
+$desktopXL: 1200px;
