--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -13,6 +13,10 @@ html {
 body {
     font-family: v.$fuente_principal;
     font-size: 1.6rem;
+
+    &.fijar-body {
+        overflow: hidden;
+    }
 } // fuente estandar y tamaño estandar para la web. 
 
 p {
